--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -126,10 +126,10 @@
     --secondary: hsl(210 40% 96.1%);
     --secondary-foreground: hsl(222.2 47.4% 11.2%);
    
-    --muted: hsl(210 40% 96.1%);
+    --muted: hsl(278, 40%, 96%);
     --muted-foreground: hsl(215.4 16.3% 46.9%);
    
-    --accent: hsl(210 40% 96.1%);
+    --accent: hsl(270, 40%, 96%);
     --accent-foreground: hsl(222.2 47.4% 11.2%);
    
     --destructive: hsl(0 84.2% 60.2%);
