--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -129,7 +129,7 @@
     --muted: hsl(278, 40%, 96%);
     --muted-foreground: hsl(215.4 16.3% 46.9%);
    
-    --accent: hsl(270, 40%, 96%);
+    --accent: hsl(15, 93%, 66%);
     --accent-foreground: hsl(222.2 47.4% 11.2%);
    
     --destructive: hsl(0 84.2% 60.2%);
@@ -161,8 +161,8 @@
     --muted: hsl(217.2 32.6% 17.5%);
     --muted-foreground: hsl(215 20.2% 65.1%);
    
-    --accent: hsl(217.2 32.6% 17.5%);
-    --accent-foreground: hsl(210 40% 98%);
+    --accent: hsla(15, 93%, 66%, 0.1);
+    --accent-foreground: hsl(15, 93%, 66%);
    
     --destructive: hsl(0 62.8% 30.6%);
     --destructive-foreground: hsl(210 40% 98%);
